# excellent-demo

./: .gitignore  CMakeLists.txt  README.md  lib.c  lib.ll  lib_tracked.cpp  lib_tracked.h  requirements.txt  test_help.py
customer/: features.ll  features.py
factorial/: factorial.ll  main.c
local/: main.c
qemu/: Makefile  lm3s6965_layout.ld  serial_print.c  startup_lm3s6965.elf
sgram/: sgram.ll  sgram.py
trivial/: impl.py  main.c  main.cpp  my_add.codon  my_add.ll  my_add.py  my_add_strip.ll  test.py
tsfresh-example/: example.ll  example.py
